@@ -1,4 +1,65 @@
 import collections
+import itertools
+
+
+class IterEventData(object):
+
+    def __init__(self, catalog, inventory, get_waveforms, phase='P',
+                 request_window=None, pad=10, **kwargs):
+        self.catalog = catalog
+        self.inventory = inventory
+        self.get_waveforms = get_waveforms
+        method = phase[-1].upper()
+        if request_window is None:
+            request_window = (-50, 150) if method == 'P' else (-100, 50)
+        self.request_window = request_window
+        self.phase = phase
+        self.pad = pad
+        self.kwargs = kwargs
+        channels = inventory.get_contents()['channels']
+        self.stations = {ch[:-1] + '?': ch[-1] for ch in channels}
+
+    def __len__(self):
+        return len(self.catalog) * len(self.stations)
+
+    def __iter__(self):
+        from rf import rfstats, RFStream
+        for event, seedid in itertools.product(self.catalog, self.stations):
+            origin_time = (event.preferred_origin() or
+                           event.origins[0])['time']
+            try:
+                gc = self.inventory.get_coordinates
+                coords = gc(seedid[:-1] + self.stations[seedid], origin_time)
+            except:  # station not availlable at that time
+                # todo log
+                continue
+            stats = rfstats(station=coords, event=event,
+                            phase=self.phase, **self.kwargs)
+            if not stats:
+                continue
+            net, sta, loc, cha = seedid.split('.')
+            starttime = stats.onset + self.request_window[0]
+            endtime = stats.onset + self.request_window[1]
+            kws = {'network': net, 'station': sta, 'location': loc,
+                   'channel': cha, 'starttime': starttime - self.pad,
+                   'endtime': endtime + self.pad}
+            try:
+                stream = self.get_waveforms(**kws)
+            except:  # no data availlable
+                # todo log
+                continue
+            stream.trim(starttime, endtime)
+            stream.merge()
+            if len(stream) != 3:
+                # todo log
+                from warnings import warn
+                warn('Need 3 component seismograms. %d components '
+                     'detected for event %s, station %s.'
+                     % (len(stream), event.resource_id, seedid))
+                continue
+            for tr in stream:
+                tr.stats.update(stats)
+            yield RFStream(stream, warn=False)
 
 
 class IterMultipleComponents(object):
@@ -22,5 +83,5 @@ class IterMultipleComponents(object):
 
 def direct_geodetic(lonlat, azi, dist):
     from geographiclib.geodesic import Geodesic
-    coords = Geodesic.WGS84.Direct(lonlat[1], lonlat[0], azi, dist*1000)
+    coords = Geodesic.WGS84.Direct(lonlat[1], lonlat[0], azi, dist * 1000)
     return coords['lon2'], coords['lat2']
